<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <!--Progress bar-->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <!--Query control-->
    <LinearLayout
        android:id="@+id/query_control"
        android:layout_below="@id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_query"
            android:inputType="text"
            android:hint="@string/enter_a_stock_symbol"
            android:layout_weight=".7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/submit_query"
            android:text="@string/search"
            android:onClick="submitQueryButtonListener"
            android:layout_weight=".3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--Table header-->
    <TableLayout
        android:id="@+id/table_header"
        android:stretchColumns="*"
        android:layout_below="@id/query_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text="@string/date" />
            <TextView
                android:text="@string/open" />
            <TextView
                android:text="@string/high" />
            <TextView
                android:text="@string/low" />
            <TextView
                android:text="@string/close" />
            <TextView
                android:text="@string/volume" />
            <TextView
                android:text="@string/adjusted_close" />
        </TableRow>
    </TableLayout>

    <!--Primary list-->
    <ListView
        android:id="@+id/list_view"
        android:layout_below="@id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
